[package]
name = "reversi_client_rust"
description = "A client for the Reversi game server used in BYU CS 470"
repository = "https://github.com/commanderjcc/reversi_client_rust"
homepage = "https://github.com/commanderjcc/reversi_client_rust"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Josh Christensen"]


[dependencies]
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
thiserror = "2.0"

[lib]
name = "reversi_client"
path = "src/lib.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
